--- a/gitRemote/index.html
+++ b/gitRemote/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>tes saja</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur dolores neque architecto, numquam saepe eveniet
+        harum delectus tempore rerum doloremque omnis quod ullam culpa qui sit, aliquid error, deleniti quos?</p>
 </body>
 
 </html>
