--- a/gitRemote/index.html
+++ b/gitRemote/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>tes saja</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur dolores neque architecto, numquam saepe eveniet
-        harum delectus tempore rerum doloremque omnis quod ullam culpa qui sit, aliquid error, deleniti quos?</p>
+        harum delectus tempore rerum doloremque omnis quod ullam culpa qui sit, aliquid error, deleniti quos?git </p>
 </body>
 
 </html>
